<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arduino_hardware_interface</name>
  <version>0.0.1</version>
  <description>ROS 2 Hardware Interface for Warehouse Robot (Wheels + Scissor Lift)</description>

  <maintainer email="engarafa55@gmail.com">Abdelrahman Arafa</maintainer>
  <author email="engarafa55@gmail.com">Abdelrahman Arafa</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>libserial-dev</depend>
  <depend>std_msgs</depend>
  <depend>vector</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>